@@ -1,3 +1,8 @@
+2023-07-01  HIRAOKA Kazuyuki  <khi@users.osdn.me>
+
+	* howm-view.el: fix issue on dired-x
+	thx > Andrei Sukhovskii san (qojop at tuta.io)
+
 2023-02-18  HIRAOKA Kazuyuki  <khi@users.osdn.me>
 
 	* configure.ac: version 1.5.1-snapshot4
